# Traffic-Sign-Recognition-with-PyTorch

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_exploration.ipynb
src/gtsrb_classifier/: __init__.py  app.py  config.py  data.py  engine.py  evaluate.py  model.py  plots.py  predict.py  train.py  utils.py
tests/: test_core.py
