[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtsrb-traffic-sign-classifier"
version = "1.0.0"
description = "Production-style PyTorch pipeline for German traffic sign recognition."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ziraddin Gulumjanli" }
]
dependencies = [
  "torch>=2.3.0",
  "torchvision>=0.18.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
  "pillow>=10.0.0",
  "tqdm>=4.66.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "ipykernel>=6.29.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
